--- a/package.json
+++ b/package.json
@@ -3,17 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
-    "cors": "^2.8.5",
     "cra-template": "1.2.0",
-    "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4",
-    "ws": "^8.18.0",
-    "proxy": "http://localhost:4000"
-
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
